feat: passing hash from BE to FE

--- a/frontend/src/pages/create-question/create-question.scss
+++ b/frontend/src/pages/create-question/create-question.scss
@@ -57,7 +57,7 @@
             }
     }
 
-    #question-link {
+    #question-link, #question-edit-link {
         margin-top: 15px;
         display: block;
         font-size: larger;
