--- a/frontend/src/pages/question-take/components/answer.scss
+++ b/frontend/src/pages/question-take/components/answer.scss
@@ -1,5 +1,7 @@
 .answer-label {
+    position: relative;
     width: 100%;
+    margin: 0 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
