--- a/frontend/src/pages/quiz/question.scss
+++ b/frontend/src/pages/quiz/question.scss
@@ -8,8 +8,26 @@
 .question-wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: start;
-    width: 100vw;
+    justify-content: center;
+    align-items: center;
     margin: 0 1rem;
+}
+
+.answer-label {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    padding-bottom: 1.5rem;
+    margin: 0.5rem 10px;
+}
+
+.answer-wrapper {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 90px;
 }
