--- a/frontend/src/pages/question-take/question-take-page.scss
+++ b/frontend/src/pages/question-take/question-take-page.scss
@@ -18,8 +18,8 @@ ul li input[type="radio"]:hover {
 
 ul li input[type="checkbox"]:checked,
 ul li input[type="radio"]:checked {
-    background-color: black;
-    border-color: black;
+    background-color: rgb(0, 0, 0);
+    border-color: rgb(0, 0, 0);
 }
 
 ul li input[type="checkbox"]:checked::after,
@@ -87,7 +87,6 @@ ul li input[type="radio"] {
     width: 20px;
     height: 20px;
     border: 2px solid black;
-    border-radius: 10px;
     background-color: white;
     cursor: pointer;
     display: inline-block;
@@ -106,4 +105,8 @@ ul li input[type="radio"] {
             border-color: black;
         }
     }
+}
+
+ul li input[type="radio"] {
+    border-radius: 10px;
 }
