--- a/frontend/src/pages/question-take/question-take-page.scss
+++ b/frontend/src/pages/question-take/question-take-page.scss
@@ -123,3 +123,29 @@ ul li input[type="radio"] {
 ul li input[type="radio"] {
     border-radius: 10px;
 }
+
+.resultTable {
+
+    border: 1px solid #000;
+    border-radius: 10px;
+    width: 600px;
+    margin-top: 20px;
+    margin-bottom: 40px;
+
+    .row {
+        display: flex;
+
+        div {
+            border: none;
+            padding: 8px;
+            flex: 1;
+            white-space: nowrap;
+            text-align: center;
+            display: block;
+        }
+    }
+
+    .header {
+        font-weight: bold;
+    }
+}
