feat: some absolutely needed ui stuff

--- a/frontend/src/pages/question-take/question-take-page.scss
+++ b/frontend/src/pages/question-take/question-take-page.scss
@@ -149,3 +149,9 @@ ul li input[type="radio"] {
         font-weight: bold;
     }
 }
+
+.question-form-legend {
+    opacity: 0.65;
+    font-size: 0.9rem;
+    margin-bottom: 20px;
+}
