--- a/frontend/src/pages/question-take/components/answer.scss
+++ b/frontend/src/pages/question-take/components/answer.scss
@@ -13,3 +13,15 @@
     justify-content: end;
     font-weight: 800;
 }
+
+.answer-input-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.answer-left-group {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
