--- a/frontend/src/pages/question-take/components/explanation.scss
+++ b/frontend/src/pages/question-take/components/explanation.scss
@@ -1,15 +1,6 @@
-.explanation2 {
-    width: 100%;
-    font-style: italic;
-}
-
 .explanation {
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
     width: 100%;
-    margin-top: 1rem;
-    padding-left: 0.5rem;
-    padding-bottom: 0.5rem;
+    margin: 0.5rem 0;
+    padding: 0 0.5rem;
     font-style: italic;
 }
